--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,4 +6,9 @@ jobs:
   execute:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22.x
       - run: node index.js
