--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,4 +20,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check the Github Event
-        run: echo ${{ github.event}}
+        run: echo "${{ github.event}}"
