--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,10 @@ jobs:
   create-issue:
     runs-on: ubuntu-latest
     steps:
+      - name: Update Ubuntu
+        run: |
+          sudo apt update
+          sudo apt install jq
       - name: Check the Github Event
         run: echo '${{ github.event}}' | jq
         shell: bash
