--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,5 @@ jobs:
           sudo apt update
           sudo apt install jq
       - name: Check the Github Event
-        run: echo '${{ github.event}}' | jq
+        run: echo '${{ toJSON(github.event) }}' | jq
         shell: bash
